<resources>
    <string name="app_name">IslamApplictation</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="sora">Sora</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="go_to_search">Go to Search</string>
    <string name="Quran">Quran</string>
    <string name="Azkar">Azkar</string>
    <string name="PrayerTiming">PrayerTiming</string>
    <string name="from">بِسۡمِ ٱللَّهِ ٱلرَّحۡمَٰنِ ٱلرَّحِيم</string>
    <string name="to">TO</string>
    <string name="play_pause">play_pause</string>
    <string name="elquran_ar">القرأن</string>
    <string name="al_quran_en">Al-Quran</string>
    <string-array name="countries">
        <item>AE</item>
        <item>EG</item>
        <item>DZ</item>
        <item>IQ</item>
        <item>JO</item>
        <item>LY</item>
        <item>QA</item>
        <item>SA</item>
    </string-array>
    <string-array name="prayerTimeMethods">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
    </string-array>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="welcom_back_to_islamic_app">Welcom back to Islamic-App</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forget_password">forget password</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_in_with_google">Sign In with Google</string>
    <string name="create_your_account_with_islamic_app">Create your account with Islamic-App</string>
    <string name="user_name">Fullname</string>
    <!--    <string name="sign_up_with_google">Sign Up with Google</string>-->
    <string name="sign_up">Sign UP</string>
    <string name="confirm_password">Confirm passowrd</string>
    <string name="Profile">Profile</string>
    <string name="al_quran">القرأن</string>
    <string name="al_azkar">الأذكار</string>
    <string name="prayer_time_ar">مواقيت الصلاة</string>
    <string name="log_out">تسجيل خروج</string>
    <string name="change_profile_picture">Change Profile Picture</string>
    <string name="choose_quran_voice">Quran voice</string>
    <string name="choose_prayer_time_method">Prayer time method</string>
    <string name="country">Country</string>
    <string name="city">City</string>
    <string name="save">Save</string>
    <string name="know_more_about_prayer_time_method">Click to : Know more about prayer time method</string>
</resources>